fix: modal at same z-index as main content

--- a/src/routes/Home/components/Info.scss
+++ b/src/routes/Home/components/Info.scss
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: center;
   position: absolute;
+  z-index: 1;
   width: 100vw;
   height: 100vh;
   top: 0;
